Site: UI fix for challenge workspace button spacing (#933)
* module accordian rounded borders, adjust icon size and padding

* fix challenge button spacing

--- a/dojo_theme/static/css/custom.css
+++ b/dojo_theme/static/css/custom.css
@@ -365,8 +365,16 @@ p[data-hide="true"] {
     font-size: 16px;
 }
 
+#challenge-priv {
+    padding-left: 0px !important;
+}
+.pr-2 {
+    padding: 0 0.5rem;
+}
+
 .fas {
     padding-right: 0.75rem;
+    padding-left: 0.75rem;
 }
 
 .card-small {
